# presonus_ctrl

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml  release.yml
captures/: README.md
captures/fixtures/: packet_fixture_template.json
captures/notes/: CAPTURE_CHECKLIST.md  mainMix_volume_Up_Down-chan1_chan2_playback_virtualA_virtualB_Reverb_Main.md
cli/: __init__.py  main.py
docs/: NEXT_STEPS_PROTOCOL_PLAN.md  PUBLISHING.md  TEST_RECOVERY_PLAN.md
docs/protocol/: CAPTURE_GUIDE.md  LINUX_PROBING_NOTES.md  PROTOCOL_DISCOVERY.md  PROTOCOL_MAP.md
examples/: basic_usage.py
presonus/: __init__.py  capabilities.py  device.py  models.py  protocol.py  usb_transport.py
presonus/backends/: __init__.py  auto_backend.py  base.py  mock_backend.py  protocol_backend.py
tests/: conftest.py  test_capabilities.py  test_capture_fixtures.py  test_capture_helper.py  test_cli.py  test_cli_integration.py  test_device.py  test_device_api.py  test_dsp_effects.py  test_errors.py  test_integration.py  test_models.py  test_protocol.py  test_protocol_backend.py  test_protocol_full.py  test_routing.py
tools/: analyze_usb.py  capture_and_analyze.py  example_capture.pcap  monitor_usb_endpoint.py  monitor_vendor_endpoint.py  new_capture_session.py  prepare_release.py  send_known_sequence.py
udev/: 99-presonus-io24.rules
